[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sre-gym"
version = "1.1.0"
description = "Deterministic RL environment for production SRE incident response"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.hatch.build.targets.wheel]
packages = [
  "server",
  "client.py",
  "models.py",
  "__init__.py"
]
